--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -41,16 +41,16 @@
           </div>
           <ul class="navbar-list">
             <li>
-              <a href="/" class="navbar-link" data-nav-link>Home</a>
+              <a href="/" class="navbar-link-non-home" data-nav-link>Home</a>
             </li>
             <li>
-              <a href="../dashboard" class="navbar-link" data-nav-link>Dashboard</a>
+              <a href="/dashboard" class="navbar-link-non-home" data-nav-link>Dashboard</a>
             </li>
             <li>
-              <a href="../sentiment" class="navbar-link" data-nav-link>Sentiment Prediction</a>
+              <a href="/sentiment" class="navbar-link-non-home" data-nav-link>Sentiment Prediction</a>
             </li>
             <li>
-              <a href="../about" class="navbar-link" data-nav-link>About Us</a>
+              <a href="/about" class="navbar-link-non-home" data-nav-link>About Us</a>
             </li>
           </ul>
         </nav>
