--- a/web/sentiment/index.html
+++ b/web/sentiment/index.html
@@ -54,64 +54,47 @@
 </head>
 
 <body id="top">
-
-  <!-- 
-    - #HEADER
-  -->
-
+  <!-- HEADER -->
   <header class="header-non-home header" data-header>
-
     <div class="overlay" data-overlay></div>
-
     <div class="header-bottom">
       <div class="container">
-
-        <!-- LOGO -->
         <a href="/" class="logo">
-          <img src="../assets/images/blue-voice-header-logo-no-motto.png" alt="Blue Voice logo">
+          <img src="../assets/images/blue-voice-header-logo-no-motto.png" alt="Blue Voice logo" />
         </a>
-
-        <!-- NAV OPEN BUTTON (HAMBURGER) -->
         <button class="nav-open-btn" aria-label="Open Menu" data-nav-open-btn style="color: var(--bright-navy-blue);">
           <ion-icon name="menu-outline"></ion-icon>
         </button>
-
-        <!-- NAVBAR -->
         <nav class="navbar" data-navbar>
           <div class="navbar-top">
-
-            <!-- CLOSE BUTTON -->
             <button class="nav-close-btn" aria-label="Close Menu" data-nav-close-btn>
               <ion-icon name="close-outline"></ion-icon>
             </button>
-
           </div>
-
           <ul class="navbar-list">
             <li>
-              <a href="/" class="navbar-link" data-nav-link>Home</a>
+              <a href="/" class="navbar-link-non-home" data-nav-link>Home</a>
             </li>
             <li>
-              <a href="../dashboard" class="navbar-link" data-nav-link>Dashboard</a>
+              <a href="/dashboard" class="navbar-link-non-home" data-nav-link>Dashboard</a>
             </li>
             <li>
-              <a href="../sentiment" class="navbar-link" data-nav-link>Sentiment Prediction</a>
+              <a href="/sentiment" class="navbar-link-non-home" data-nav-link>Sentiment Prediction</a>
             </li>
             <li>
-              <a href="../about" class="navbar-link" data-nav-link>About Us</a>
+              <a href="/about" class="navbar-link-non-home" data-nav-link>About Us</a>
             </li>
           </ul>
         </nav>
-
       </div>
     </div>
   </header>
 
   <main>
     <article style="padding-top: 2vh;">
-      <section class="package" id="package">
+      <section class="package" id="package" style="margin-top: 3vh;">
         <div class="container">
-          <h2 class="h2 section-title">Please enter your review in the field below</h2>
+          <h2 class="h2 section-title" style="margin-top: 4vh;">Please enter your review in the field below</h2>
           <br>
 
           <div class="sentiment-prediction-tab">
@@ -191,7 +174,7 @@
           </div>
       </section>
 
-      <section class="popular" style="margin-top: 3vh;">
+      <section class="popular">
         <div class="container">
           <div class="sentiment-analysis-description">
             <div style="display: flex; justify-content: center; align-items: center; width: 100%; height: 100%;">
